style: fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -13,22 +13,14 @@ body {
   font-size: 12px;
   font-family: "League Spartan", sans-serif;
 
-  width: 100vw;
   min-height: 100vh;
 }
 
-.class-1 {
-  font-weight: 500;
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-
-.class-2 {
-  font-weight: 600;
-}
-
-.class-3 {
-  font-weight: 700;
-}
-
 .main,
 .first-part,
 .second-part {
@@ -38,14 +30,14 @@ body {
 
 .header {
   /* encima de la imagen */
-  position: absolute;
+  position: fixed;
 
   /* centrar */
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 
+  width: 100%;
 
   /* padding superior */
   margin: 1rem;
